kubernetes/mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bankapp
spec:
  selector:
    app: mysql  # This connects the service to the StatefulSet pods
  ports:
    - port: 3306
      targetPort: 3306
